Clean outputs from roberta_full_code notebook

--- a/notebooks/roberta_full_code.ipynb
+++ b/notebooks/roberta_full_code.ipynb
@@ -92,7 +92,10 @@
     "\n",
     "from collections import Counter\n",
     "\n",
-    "import re"
+    "import re\n",
+    "\n",
+    "from shutil import copytree\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -264,15 +267,8 @@
    "source": [
     "# Define model names\n",
     "MODEL_NAME_TWITTER = \"cardiffnlp/twitter-roberta-base\"\n",
-    "MODEL_NAME_ELECTRA = \"google/electra-base-discriminator\"\n",
-    "\n",
     "# Load tokenizers\n",
-    "tokenizers = {\n",
-    "    MODEL_NAME_TWITTER: AutoTokenizer.from_pretrained(MODEL_NAME_TWITTER, use_fast=True),\n",
-    "    MODEL_NAME_ELECTRA: AutoTokenizer.from_pretrained(MODEL_NAME_ELECTRA)\n",
-    "}\n",
-    "\n",
-    "\n"
+    "tokenizer =  AutoTokenizer.from_pretrained(MODEL_NAME_TWITTER, use_fast=True)\n"
    ]
   },
   {
@@ -621,6 +617,9 @@
     "        ]\n",
     "    )\n",
     "\n",
+    "    trial_dir = Path(f\"./runs_fullcode/trial-{trial.number}\")\n",
+    "    trial_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "    # --- W&B (sanitize slashes) ---\n",
     "    safe_model_name = model_name.replace(\"/\", \"-\")\n",
     "    wandb.init(\n",
@@ -640,6 +639,15 @@
     "            model, train_loader, val_loader, optimizer, criterion,\n",
     "            epochs, patience, trial, warmup_ratio=warmup_ratio, scheduler_name=scheduler\n",
     "        )\n",
+    "\n",
+    "        model.save_pretrained(trial_dir.as_posix())\n",
+    "        tokenizer.save_pretrained(trial_dir.as_posix())\n",
+    "\n",
+    "        \n",
+    "        trial.set_user_attr(\"best_dir\", str(trial_dir))\n",
+    "\n",
+    "\n",
+    "\n",
     "        return val_accuracy\n",
     "    finally:\n",
     "        # Clean up GPU even on prune/error\n",
@@ -702,157 +710,18 @@
    "source": [
     "# RoBERTa\n",
     "study = optuna.create_study(direction=\"maximize\")\n",
-    "study.optimize(lambda trial: objective(trial, model_name=MODEL_NAME_TWITTER, tokenizer=tokenizers[MODEL_NAME_TWITTER]), n_trials=10)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "joWdG-T3cWeR",
-   "metadata": {
-    "id": "joWdG-T3cWeR"
-   },
-   "source": [
-    "REST OF THINGS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0dFL_rjUixoe",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 966,
-     "referenced_widgets": [
-      "70f22318271a41bfa90215e0e67a3cfe",
-      "2e4f30cfa7084f8c926551ed4ac1538b",
-      "929b229b48904bbf9f69256af8148322",
-      "43941648449e499292e9815d2f18a8a0",
-      "a9e5ca225a444386bad1f9a404515f5e",
-      "09a8cf628ea44851bb23398730a1154e",
-      "02b74fa93ec44278bcdc1a44816a2e2b",
-      "c0782ddabe8942b6bcea8b06fe93b07f",
-      "5ea79155bd7946c9913435ed4b7b0ce2",
-      "fc60e0a703114986988ad784eeb494d0",
-      "3ff8c45a746a436ca62a43d8c322e8f4",
-      "e6f97dc2e3354ec3a379f59b9d03716a",
-      "75c606abc4cc48bb85a024eda689cd4b",
-      "d83094b5d9e54ddda025a233f8db8d96",
-      "2dc73dc6a7f34f1aa21f97788e33aef7",
-      "382e8ad4cf324068be18801fe43e681d",
-      "eeffb012e26043c6bd220eb221f85919",
-      "4ef44da53136478ba9e2e8e5e092a6af",
-      "ea68c3729f6f40789c150a554959f3a4",
-      "f3e355fe26b44967b9057044d0ed7266",
-      "82b19181ca69412ab242f62dd2118c2c",
-      "13efac5e80d14ed1b589af5b58b44c38"
-     ]
-    },
-    "collapsed": true,
-    "executionInfo": {
-     "elapsed": 1621909,
-     "status": "ok",
-     "timestamp": 1755618427241,
-     "user": {
-      "displayName": "Maximiliano Niemetz",
-      "userId": "11691041071436739463"
-     },
-     "user_tz": -180
-    },
-    "id": "0dFL_rjUixoe",
-    "outputId": "26a3f120-5a69-4f66-fb0d-c9641ee97d2d"
-   },
-   "outputs": [],
-   "source": [
-    "# === Best HPs from W&B (trial-0) ===\n",
-    "BEST = {\n",
-    "    \"batch_size\":   16,\n",
-    "    \"dropout\":      0.18220476189798832,\n",
-    "    \"epochs\":       6,\n",
-    "    \"head_lr\":      2.091e-4,        \n",
-    "    \"learning_rate\":5.22751e-05,\n",
-    "    \"max_length\":   192,\n",
-    "    \"patience\":     2,\n",
-    "    \"scheduler\":    \"linear\",\n",
-    "    \"warmup_ratio\": 0.06,\n",
-    "    \"weight_decay\": 0.01,\n",
-    "}\n",
+    "study.optimize(lambda trial: objective(trial, model_name=MODEL_NAME_TWITTER, tokenizer=tokenizer), n_trials=10)\n",
     "\n",
-    "MODEL_NAME = \"cardiffnlp/twitter-roberta-base\"   # change if needed\n",
-    "SAVE_DIR   = \"/content/drive/MyDrive/Colab Notebooks/best_roberta_trial0\"\n",
+    "print(\"Best value:\", study.best_value)\n",
+    "print(\"Best params:\", study.best_params)\n",
     "\n",
-    "from transformers import AutoTokenizer, AutoConfig, AutoModelForSequenceClassification\n",
-    "from torch.utils.data import DataLoader\n",
-    "from torch import nn\n",
-    "from torch.optim import AdamW\n",
-    "import numpy as np\n",
-    "import wandb, os, torch\n",
+    "best_trial = study.best_trial\n",
+    "best_dir = best_trial.user_attrs.get(\"best_dir\", None)\n",
+    "assert best_dir is not None, \"No best_dir found on the best trial. Did you add trial.set_user_attr('best_dir', ...)?\"\n",
     "\n",
-    "# Init W&B run (train_model_with_hyperparams uses wandb.log)\n",
-    "wandb.init(\n",
-    "    project=\"twitter-roberta-fullcode\",\n",
-    "    name=\"best_retrain_trial-0\",\n",
-    "    config=BEST,\n",
-    "    reinit=True\n",
-    ")\n",
-    "\n",
-    "# --- Tokenizer with your special tokens ---\n",
-    "tokenizer = AutoTokenizer.from_pretrained(MODEL_NAME, use_fast=True)\n",
-    "tokenizer.add_special_tokens({\"additional_special_tokens\": [\"<url>\", \"<user>\", \"<number>\"]})\n",
-    "\n",
-    "# --- Data loaders with best max_length / batch_size ---\n",
-    "train_dataset = TweetDataset(train_df, tokenizer, max_length=BEST[\"max_length\"])\n",
-    "val_dataset   = TweetDataset(val_df,   tokenizer, max_length=BEST[\"max_length\"])\n",
-    "\n",
-    "train_loader  = DataLoader(train_dataset, batch_size=BEST[\"batch_size\"], shuffle=True, pin_memory=True)\n",
-    "val_loader    = DataLoader(val_dataset,   batch_size=BEST[\"batch_size\"],               pin_memory=True)\n",
-    "\n",
-    "# --- Model with best dropout ---\n",
-    "config = AutoConfig.from_pretrained(\n",
-    "    MODEL_NAME,\n",
-    "    num_labels=5,\n",
-    "    hidden_dropout_prob=BEST[\"dropout\"],\n",
-    "    attention_probs_dropout_prob=BEST[\"dropout\"],\n",
-    "    id2label={i: k for k, i in label2id.items()},\n",
-    "    label2id=label2id\n",
-    ")\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(MODEL_NAME, config=config)\n",
-    "model.resize_token_embeddings(len(tokenizer))\n",
-    "model = model.to(device)\n",
-    "\n",
-    "# --- Class-weighted loss (same recipe you used) ---\n",
-    "counts = np.bincount(train_df[\"label\"].values, minlength=5)\n",
-    "weights = 1.0 / np.maximum(counts, 1)\n",
-    "class_weights = torch.tensor(weights, dtype=torch.float, device=device)\n",
-    "criterion = nn.CrossEntropyLoss(weight=class_weights)\n",
-    "\n",
-    "# --- Discriminative LRs: backbone vs head ---\n",
-    "head_params, backbone_params = [], []\n",
-    "for n, p in model.named_parameters():\n",
-    "    (head_params if \"classifier\" in n else backbone_params).append(p)\n",
-    "\n",
-    "optimizer = AdamW(\n",
-    "    [\n",
-    "        {\"params\": backbone_params, \"lr\": BEST[\"learning_rate\"], \"weight_decay\": BEST[\"weight_decay\"]},\n",
-    "        {\"params\": head_params,     \"lr\": BEST[\"head_lr\"],       \"weight_decay\": 0.0},\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "# --- Train with your helper (does early stop + best state restore) ---\n",
-    "best_val_acc = train_model_with_hyperparams(\n",
-    "    model, train_loader, val_loader, optimizer, criterion,\n",
-    "    epochs=BEST[\"epochs\"], patience=BEST[\"patience\"], trial=None,\n",
-    "    warmup_ratio=BEST[\"warmup_ratio\"], scheduler_name=BEST[\"scheduler\"]\n",
-    ")\n",
-    "print(f\"[trial-0] Rebuilt best model. Val accuracy = {best_val_acc:.4f}\")\n",
-    "\n",
-    "# --- Save persistently ---\n",
-    "os.makedirs(SAVE_DIR, exist_ok=True)\n",
-    "model.save_pretrained(SAVE_DIR)\n",
-    "tokenizer.save_pretrained(SAVE_DIR)\n",
-    "print(\"Saved best model and tokenizer to:\", SAVE_DIR)\n",
-    "\n",
-    "wandb.finish()\n"
+    "FINAL_DIR = Path(\"./best_model_autosaved\")\n",
+    "copytree(best_dir, FINAL_DIR, dirs_exist_ok=True)\n",
+    "print(\"✅ Best model copied to:\", FINAL_DIR)"
    ]
   },
   {
@@ -883,7 +752,7 @@
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "# Point to your saved checkpoint folder (where config.json + pytorch_model.bin live)\n",
-    "BASE_DIR = \"/content/drive/MyDrive/Colab Notebooks/best_roberta_trial0\"  # or your local path\n",
+    "BASE_DIR = \"./best_model_autosaved\"  \n",
     "\n",
     "model = AutoModelForSequenceClassification.from_pretrained(BASE_DIR).to(DEVICE)\n",
     "tokenizer = AutoTokenizer.from_pretrained(BASE_DIR)\n"
