Clean outputs from roberta_hf_trainer notebook

--- a/notebooks/roberta_hf_trainer.ipynb
+++ b/notebooks/roberta_hf_trainer.ipynb
@@ -117,7 +117,7 @@
    "outputs": [],
    "source": [
     "import wandb\n",
-    "wandb.login(key=\"c76b3f4273b893fc55052d914d403d9718122ab7\")"
+    "wandb.login(key=#'YOUR_WANDB_API_KEY')"
    ]
   },
   {
@@ -168,8 +168,8 @@
     "    \"Extremely Positive\": 4\n",
     "}\n",
     "\n",
-    "train_path = \"/content/drive/MyDrive/Colab Notebooks/Corona_NLP_train_clean.csv\"\n",
-    "test_path  = \"/content/drive/MyDrive/Colab Notebooks/Corona_NLP_test_clean.csv\"\n",
+    "train_path = #your train_path\n",
+    "test_path  = #your test_path\n",
     "\n",
     "train_df = pd.read_csv(train_path, encoding=\"ISO-8859-1\")\n",
     "test_df  = pd.read_csv(test_path,  encoding=\"ISO-8859-1\")\n",
@@ -801,148 +801,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 2348,
-     "status": "ok",
-     "timestamp": 1755598173410,
-     "user": {
-      "displayName": "Maximiliano Niemetz",
-      "userId": "11691041071436739463"
-     },
-     "user_tz": -180
-    },
-    "id": "XZmfXRxgziLV",
-    "outputId": "4c9a6a54-ad76-4286-9cf3-f5f892249621"
-   },
-   "outputs": [],
-   "source": [
-    "import shutil\n",
-    "\n",
-    "safe_dir = \"./best_model_for_compression\"\n",
-    "shutil.copytree(\"./hf_roberta_optuna/5\", safe_dir, dirs_exist_ok=True)\n",
-    "print(\"✅ Model copied to:\", safe_dir)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "collapsed": true,
-    "executionInfo": {
-     "elapsed": 253,
-     "status": "ok",
-     "timestamp": 1755598206522,
-     "user": {
-      "displayName": "Maximiliano Niemetz",
-      "userId": "11691041071436739463"
-     },
-     "user_tz": -180
-    },
-    "id": "4G1whqVezpax",
-    "outputId": "4dbe77d0-b3e1-47be-f6ec-24624fb81347"
-   },
-   "outputs": [],
-   "source": [
-    "model = AutoModelForSequenceClassification.from_pretrained(safe_dir)\n",
-    "model.to(DEVICE)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 49,
-     "referenced_widgets": [
-      "5f68ba2d0fe347b8a61feea4b109e68a",
-      "109dfc46ccfd4cd98749b04ec9ac9fea",
-      "b90778cc0c604ec3aa601fb349e00273",
-      "610a1818f2964d1890efcd6d714b6429",
-      "a9801968b6184b958d74aabd28aee91e",
-      "119d6f4ac5b4455b8f155c5a9ceb770e",
-      "28930aeae8954169a39f220981a9aaae",
-      "9fda7ef7f8df4139a0281da445f294eb",
-      "96e4737127534c9d9ba77ce0e3e7d918",
-      "0a78d3d51fd54d5bb6348c1777b1f3ea",
-      "6bf7874b38ac4f438af365d7a970157c"
-     ]
-    },
-    "executionInfo": {
-     "elapsed": 568,
-     "status": "ok",
-     "timestamp": 1755598252975,
-     "user": {
-      "displayName": "Maximiliano Niemetz",
-      "userId": "11691041071436739463"
-     },
-     "user_tz": -180
-    },
-    "id": "8UqtUzQvzujD",
-    "outputId": "2bddfd90-c0c5-4baa-c755-1ed3fb4d74c8"
-   },
-   "outputs": [],
-   "source": [
-    "# Re-tokenize test set using best max_length = 192\n",
-    "def preprocess_test(examples):\n",
-    "    enc = tokenizer(\n",
-    "        examples[\"cleaned_tweets\"],\n",
-    "        truncation=True,\n",
-    "        padding=\"max_length\",\n",
-    "        max_length=192\n",
-    "    )\n",
-    "    enc[\"labels\"] = examples[\"label\"]\n",
-    "    return enc\n",
-    "\n",
-    "test_tok = test_dataset_hf.map(preprocess_test, batched=True, remove_columns=test_dataset_hf.column_names)\n",
-    "test_tok.set_format(type=\"torch\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 200
-    },
-    "collapsed": true,
-    "executionInfo": {
-     "elapsed": 9252,
-     "status": "ok",
-     "timestamp": 1755598281475,
-     "user": {
-      "displayName": "Maximiliano Niemetz",
-      "userId": "11691041071436739463"
-     },
-     "user_tz": -180
-    },
-    "id": "u7D6VHIwz3xR",
-    "outputId": "889c9c56-3dbd-4022-9463-dcc4bbc13918"
-   },
-   "outputs": [],
-   "source": [
-    "trainer = Trainer(\n",
-    "    model=model,\n",
-    "    tokenizer=tokenizer,\n",
-    "    data_collator=default_data_collator,\n",
-    "    compute_metrics=compute_metrics\n",
-    ")\n",
-    "\n",
-    "test_metrics = trainer.evaluate(test_tok)\n",
-    "print(test_metrics)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "n_JOqGt_45pr"
@@ -1151,13 +1009,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "KiDUOdeTvVIw"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "If you want to save your models to your drive or computer"
+   ]
   },
   {
    "cell_type": "code",
@@ -1181,7 +1039,7 @@
    },
    "outputs": [],
    "source": [
-    "OUT_DIR = \"/content/drive/MyDrive/Colab Notebooks/best_roberta_trial5_compressed\"\n",
+    "OUT_DIR = #write the output directory here\n",
     "os.makedirs(OUT_DIR, exist_ok=True)\n",
     "\n",
     "# A) Save FP16\n",
